// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`index > tracker > all 1`] = `
[
  {
    "declarativeStates": [],
    "proceduralStates": [
      {
        "f": {},
        "totalCallsCount": 0,
        "wait": {
          "dependencies": Set {},
          "duration": 0,
          "type": "any",
        },
      },
      {
        "f": {},
        "totalCallsCount": 0,
        "wait": {
          "dependencies": Set {},
          "duration": 0,
          "type": "any",
        },
      },
      {
        "f": {},
        "totalCallsCount": 1,
        "wait": {
          "dependencies": Set {
            {},
            {},
          },
          "duration": 0,
          "type": "all",
        },
      },
    ],
    "refValues": [
      {
        "key": {
          "current": 2,
        },
        "value": 0,
      },
    ],
    "time": 0,
  },
  {
    "declarativeStates": [],
    "proceduralStates": [
      {
        "f": {},
        "totalCallsCount": 0,
        "wait": {
          "dependencies": Set {},
          "duration": 0,
          "type": "any",
        },
      },
      {
        "f": {},
        "totalCallsCount": 1,
        "wait": {
          "dependencies": Set {
            {},
            {},
          },
          "duration": 0,
          "type": "all",
        },
      },
      {
        "f": {},
        "totalCallsCount": 1,
        "wait": {
          "dependencies": Set {},
          "duration": 1,
          "type": "any",
        },
      },
    ],
    "refValues": [
      {
        "key": {
          "current": 2,
        },
        "value": 0,
      },
    ],
    "time": 0,
  },
  {
    "declarativeStates": [],
    "proceduralStates": [
      {
        "f": {},
        "totalCallsCount": 1,
        "wait": {
          "dependencies": Set {
            {},
            {},
          },
          "duration": 0,
          "type": "all",
        },
      },
      {
        "f": {},
        "totalCallsCount": 1,
        "wait": {
          "dependencies": Set {},
          "duration": 1,
          "type": "any",
        },
      },
      {
        "f": {},
        "totalCallsCount": 1,
        "wait": {
          "dependencies": Set {},
          "duration": 2,
          "type": "any",
        },
      },
    ],
    "refValues": [
      {
        "key": {
          "current": 2,
        },
        "value": 0,
      },
    ],
    "time": 0,
  },
  {
    "declarativeStates": [],
    "proceduralStates": [
      {
        "f": {},
        "totalCallsCount": 1,
        "wait": {
          "dependencies": Set {
            {},
          },
          "duration": -1,
          "type": "all",
        },
      },
      {
        "f": {},
        "totalCallsCount": 1,
        "wait": {
          "dependencies": Set {},
          "duration": 1,
          "type": "any",
        },
      },
    ],
    "refValues": [
      {
        "key": {
          "current": 2,
        },
        "value": 1,
      },
    ],
    "time": 1,
  },
  {
    "declarativeStates": [],
    "proceduralStates": [
      {
        "f": {},
        "totalCallsCount": 1,
        "wait": {
          "dependencies": Set {},
          "duration": -2,
          "type": "all",
        },
      },
    ],
    "refValues": [
      {
        "key": {
          "current": 2,
        },
        "value": 2,
      },
    ],
    "time": 2,
  },
  {
    "declarativeStates": [],
    "proceduralStates": [],
    "refValues": [
      {
        "key": {
          "current": 2,
        },
        "value": 2,
      },
    ],
    "time": 0,
  },
]
`;

exports[`index > tracker > any 1`] = `
[
  {
    "declarativeStates": [],
    "proceduralStates": [
      {
        "f": {},
        "totalCallsCount": 0,
        "wait": {
          "dependencies": Set {},
          "duration": 0,
          "type": "any",
        },
      },
      {
        "f": {},
        "totalCallsCount": 0,
        "wait": {
          "dependencies": Set {},
          "duration": 0,
          "type": "any",
        },
      },
      {
        "f": {},
        "totalCallsCount": 1,
        "wait": {
          "dependencies": Set {
            {},
            {},
          },
          "duration": 0,
          "type": "any",
        },
      },
    ],
    "refValues": [
      {
        "key": {
          "current": 2,
        },
        "value": 0,
      },
    ],
    "time": 0,
  },
  {
    "declarativeStates": [],
    "proceduralStates": [
      {
        "f": {},
        "totalCallsCount": 0,
        "wait": {
          "dependencies": Set {},
          "duration": 0,
          "type": "any",
        },
      },
      {
        "f": {},
        "totalCallsCount": 1,
        "wait": {
          "dependencies": Set {
            {},
            {},
          },
          "duration": 0,
          "type": "any",
        },
      },
      {
        "f": {},
        "totalCallsCount": 1,
        "wait": {
          "dependencies": Set {},
          "duration": 1,
          "type": "any",
        },
      },
    ],
    "refValues": [
      {
        "key": {
          "current": 2,
        },
        "value": 0,
      },
    ],
    "time": 0,
  },
  {
    "declarativeStates": [],
    "proceduralStates": [
      {
        "f": {},
        "totalCallsCount": 1,
        "wait": {
          "dependencies": Set {
            {},
            {},
          },
          "duration": 0,
          "type": "any",
        },
      },
      {
        "f": {},
        "totalCallsCount": 1,
        "wait": {
          "dependencies": Set {},
          "duration": 1,
          "type": "any",
        },
      },
      {
        "f": {},
        "totalCallsCount": 1,
        "wait": {
          "dependencies": Set {},
          "duration": 2,
          "type": "any",
        },
      },
    ],
    "refValues": [
      {
        "key": {
          "current": 2,
        },
        "value": 0,
      },
    ],
    "time": 0,
  },
  {
    "declarativeStates": [],
    "proceduralStates": [
      {
        "f": {},
        "totalCallsCount": 1,
        "wait": {
          "dependencies": Set {},
          "duration": -1,
          "type": "any",
        },
      },
      {
        "f": {},
        "totalCallsCount": 1,
        "wait": {
          "dependencies": Set {},
          "duration": 1,
          "type": "any",
        },
      },
    ],
    "refValues": [
      {
        "key": {
          "current": 2,
        },
        "value": 1,
      },
    ],
    "time": 1,
  },
  {
    "declarativeStates": [],
    "proceduralStates": [
      {
        "f": {},
        "totalCallsCount": 1,
        "wait": {
          "dependencies": Set {},
          "duration": 2,
          "type": "any",
        },
      },
    ],
    "refValues": [
      {
        "key": {
          "current": 2,
        },
        "value": 1,
      },
    ],
    "time": 0,
  },
  {
    "declarativeStates": [],
    "proceduralStates": [],
    "refValues": [
      {
        "key": {
          "current": 2,
        },
        "value": 2,
      },
    ],
    "time": 2,
  },
]
`;

exports[`index > tracker > sleeps 1`] = `
[
  {
    "declarativeStates": [],
    "proceduralStates": [
      {
        "f": {},
        "totalCallsCount": 1,
        "wait": {
          "dependencies": Set {},
          "duration": 1,
          "type": "any",
        },
      },
    ],
    "refValues": [
      {
        "key": {
          "current": 2,
        },
        "value": 0,
      },
    ],
    "time": 0,
  },
  {
    "declarativeStates": [],
    "proceduralStates": [
      {
        "f": {},
        "totalCallsCount": 2,
        "wait": {
          "dependencies": Set {},
          "duration": 1,
          "type": "any",
        },
      },
    ],
    "refValues": [
      {
        "key": {
          "current": 2,
        },
        "value": 1,
      },
    ],
    "time": 1,
  },
  {
    "declarativeStates": [
      {
        "duration": 1,
        "f": [Function],
        "startTime": 2,
      },
    ],
    "proceduralStates": [
      {
        "f": {},
        "totalCallsCount": 3,
        "wait": {
          "dependencies": Set {},
          "duration": 1,
          "type": "any",
        },
      },
    ],
    "refValues": [
      {
        "key": {
          "current": 2,
        },
        "value": 1,
      },
    ],
    "time": 2,
  },
  {
    "declarativeStates": [],
    "proceduralStates": [
      {
        "f": {},
        "totalCallsCount": 4,
        "wait": {
          "dependencies": Set {},
          "duration": 1,
          "type": "any",
        },
      },
    ],
    "refValues": [
      {
        "key": {
          "current": 2,
        },
        "value": 1,
      },
    ],
    "time": 3,
  },
  {
    "declarativeStates": [],
    "proceduralStates": [
      {
        "f": {},
        "totalCallsCount": 5,
        "wait": {
          "dependencies": Set {},
          "duration": 1,
          "type": "any",
        },
      },
    ],
    "refValues": [
      {
        "key": {
          "current": 2,
        },
        "value": 2,
      },
    ],
    "time": 4,
  },
  {
    "declarativeStates": [],
    "proceduralStates": [],
    "refValues": [
      {
        "key": {
          "current": 2,
        },
        "value": 2,
      },
    ],
    "time": 5,
  },
]
`;
